--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>this is an example of favourite food</h1>
+    <h2>here shall be listed many food items</h2>
 </body>
 </html>
