--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>this is an example of favourite food</h1>
     <h2>here shall be listed many food items</h2>
+    <h3>food items</h3>
 </body>
 </html>
