add welcme to webpage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Favourite Foods</title>
 </head>
 <body>
-    <h1>this is an example of favourite food</h1>
+    <h1>Welcome to my webpage</h1>
     <h2>here shall be listed many food items</h2>
     <h3>food items</h3>
 </body>
