--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <h1>Welcome to my webpage</h1>
     <h2>here shall be listed many food items</h2>
     <h3>food items</h3>
+    <p>We all like different foods, however, my personal favourite is burgers. I have eaten many cuisines but my favourite food is definitely a burger.</p>
+    <ul>
+        <li>pizza</li>
+        
+    </ul>
 </body>
 </html>
