--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>We all like different foods, however, my personal favourite is burgers. I have eaten many cuisines but my favourite food is definitely a burger.</p>
     <ul>
         <li>pizza</li>
-        
+        <li>Burger</li>
     </ul>
 </body>
 </html>
