--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <ul>
         <li>pizza</li>
         <li>Burger</li>
+        <li>pasta</li>
+        <li>chips</li>
     </ul>
 </body>
 </html>
