--- a/index.html
+++ b/index.html
@@ -17,5 +17,16 @@
         <li>pasta</li>
         <li>chips</li>
     </ul>
+    <form>
+        <label for="food">Favorite Food:</label>
+        <input type="text" id="food" name="food" placeholder="Enter your favorite food" required>
+        
+        <br><br>
+        <label for="food">Favorite Food:</label>
+        <input type="text" id="food" name="food" placeholder="Enter your another favorite food" required>
+    <br><br>
+    
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
