add buger image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 <body>
     <h1>Welcome to my webpage</h1>
     <h2>here shall be listed many food items</h2>
-    <h3>food items</h3>
+    <h3>Food Items</h3>
+    
+    <div>
+        <img src="images/burger.jpg"  width="300" height="200">
+        <img src="images/chips.jpg"   width="300" height="200">
+        <img src="images/pasta.jpeg"  width="300" height="200">
+        <img src="images/pizza.jpeg"  width="300" height="200">
+    </div>
+    <br><br>
+
     <p>We all like different foods, however, my personal favourite is burgers. I have eaten many cuisines but my favourite food is definitely a burger.</p>
     <ul>
         <li>pizza</li>
