--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="images/burger2.png">
 </head>
 <body>
-    <h1>Welcome to my webpage</h1>
+    <h1>Welcome to my Webpage</h1>
     <h2>here shall be listed many food items</h2>
     <h3>Food Items</h3>
     
