--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to my Webpage</h1>
-    <h2>here shall be listed many food items</h2>
+    <h2>here shall be listed many Food Items</h2>
     <h3>Food Items</h3>
     
     <div>
